# clion_conan_projects

./: CMakeLists.txt  README.md  conandata.yml
boost/version/: CMakeLists.txt  boost_version.cc
grpc/: CMakeLists.txt
grpc/client/: CMakeLists.txt  client.cc
grpc/protos/: CMakeLists.txt  hello.proto
grpc/service/: CMakeLists.txt  service.cc
logger/spdlog/: CMakeLists.txt  t_spdlog.cc
